fixed scrollbar visibility

--- a/src/Components/TopNav.module.css
+++ b/src/Components/TopNav.module.css
@@ -11,9 +11,7 @@
     background: var(--md-sys-color-surface-container-highest);
     box-shadow: 0px 2px 4px var(--md-sys-color-shadow);
 
-    /* -ms-overflow-style: none; */
-    /* IE and Edge */
-    /* scrollbar-width: none; */
+
     
     z-index: 99;
     overflow: scroll;
@@ -35,7 +33,7 @@
     color: var(--md-sys-color-on-secondary-container);
 }
 ::-webkit-scrollbar {
-    display: none;
+   
 }
 @media screen and (max-width:600px) {
     .navbtn{
